<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/parent_linear_layout_activity_detail"
    android:background="#FFFFFF"
    tools:context="com.example.android.inventoryappproject.DetailActivity">

    <LinearLayout style="@style/child_linear_layout_activity_detail">

        <TextView
            style="@style/info_text_views_activity_detail"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/edit_text_name"
            style="@style/edit_texts_activity_detail"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/product_name_hint"
            android:maxLength="20" />

    </LinearLayout>

    <LinearLayout style="@style/child_linear_layout_activity_detail">

        <TextView
            style="@style/info_text_views_activity_detail"
            android:text="@string/product_quantity" />

        <Button
            android:id="@+id/button_decrease_one"
            style="@style/PlusMinusButtonStyle"
            android:text="-" />

        <TextView
            android:id="@+id/text_view_quantity_final"
            style="@style/info_text_views_activity_detail"
            android:gravity="center"
            android:text="@string/product_quantity_init" />

        <Button
            android:id="@+id/button_increase_one"
            style="@style/PlusMinusButtonStyle"
            android:text="+" />

    </LinearLayout>


    <LinearLayout style="@style/child_linear_layout_activity_detail">

        <TextView
            style="@style/info_text_views_activity_detail"
            android:text="@string/product_price" />

        <EditText
            android:id="@+id/edit_text_price"
            style="@style/edit_texts_activity_detail"
            android:layout_marginRight="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/product_price_hint"
            android:inputType="number"
            android:maxLength="4" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/CategoryStyleCover"
                android:text="Add Image " />


            <Button
                android:id="@+id/button_select_image"
                style="@style/PlusMinusButtonStyle"
                android:layout_gravity="center"
                android:text="+" />

        </LinearLayout>

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:src="@drawable/attachment" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/supplier_phone_title"
            style="@style/info_text_views_activity_detail"
            android:text="product_order_from" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/phone_order_from_supplier"
            style="@style/phone_order_from_supplier" />

        <EditText
            android:id="@+id/detail_phone_et"
            style="@style/edit_texts_activity_detail"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="43558697"
            android:inputType="phone" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/email_order_from_supplier"
            style="@style/email_order_from_supplier" />

        <EditText
            android:id="@+id/detail_email_et"
            style="@style/edit_texts_activity_detail"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="email_hint" />


    </LinearLayout>

</LinearLayout>